--- a/pages/15524.html
+++ b/pages/15524.html
@@ -3,7 +3,7 @@
 <html xmlns="http://www.w3.org/1999/xhtml">
 <head>
   <title>
-      empty 109 in nLab
+      Scott topos in nLab
   </title>
 
   <meta http-equiv="Content-Type" content="text/html; charset=UTF-8" />
@@ -283,7 +283,7 @@ margin-left: 0em;
         c9-9,20-18,33-22C159,52,166,54,170,60' />
     </svg></span>
       <span class="webName">nLab</span><br />
-      empty 109
+      Scott topos
   </h1>
 
 
@@ -308,26 +308,559 @@ margin-left: 0em;
 
 
 <div id="revision">
-    <p><div class='property'> category: <a class='category_link' href='/nlab/list/empty'>empty</a></div></p>
+    <p>
+</p>
+
+<div class='rightHandSide'>
+<div class='toc clickDown' tabindex='0'>
+<h3 id='context'>Context</h3>
+
+<h4 id='category_theory'>Category theory</h4>
+
+<div class='hide'>
+<p><strong><a class='existingWikiWord' href='/nlab/show/category+theory'>category theory</a></strong></p>
+
+<h2 id='concepts'>Concepts</h2>
+
+<ul>
+<li>
+<p><a class='existingWikiWord' href='/nlab/show/category'>category</a></p>
+</li>
+
+<li>
+<p><a class='existingWikiWord' href='/nlab/show/functor'>functor</a></p>
+</li>
+
+<li>
+<p><a class='existingWikiWord' href='/nlab/show/natural+transformation'>natural transformation</a></p>
+</li>
+
+<li>
+<p><a class='existingWikiWord' href='/nlab/show/Cat'>Cat</a></p>
+</li>
+</ul>
+
+<h2 id='universal_constructions'>Universal constructions</h2>
+
+<ul>
+<li>
+<p><a class='existingWikiWord' href='/nlab/show/universal+construction'>universal construction</a></p>
+
+<ul>
+<li>
+<p><a class='existingWikiWord' href='/nlab/show/representable+functor'>representable functor</a></p>
+</li>
+
+<li>
+<p><a class='existingWikiWord' href='/nlab/show/adjoint+functor'>adjoint functor</a></p>
+</li>
+
+<li>
+<p><a class='existingWikiWord' href='/nlab/show/limit'>limit</a>/<a class='existingWikiWord' href='/nlab/show/colimit'>colimit</a></p>
+</li>
+
+<li>
+<p><a class='existingWikiWord' href='/nlab/show/weighted+limit'>weighted limit</a></p>
+</li>
+
+<li>
+<p><a class='existingWikiWord' href='/nlab/show/end'>end</a>/<a class='existingWikiWord' href='/nlab/show/end'>coend</a></p>
+</li>
+
+<li>
+<p><a class='existingWikiWord' href='/nlab/show/Kan+extension'>Kan extension</a></p>
+</li>
+</ul>
+</li>
+</ul>
+
+<h2 id='theorems'>Theorems</h2>
+
+<ul>
+<li>
+<p><a class='existingWikiWord' href='/nlab/show/Yoneda+lemma'>Yoneda lemma</a></p>
+</li>
+
+<li>
+<p><a class='existingWikiWord' href='/nlab/show/Isbell+duality'>Isbell duality</a></p>
+</li>
+
+<li>
+<p><a class='existingWikiWord' href='/nlab/show/Grothendieck+construction'>Grothendieck construction</a></p>
+</li>
+
+<li>
+<p><a class='existingWikiWord' href='/nlab/show/adjoint+functor+theorem'>adjoint functor theorem</a></p>
+</li>
+
+<li>
+<p><a class='existingWikiWord' href='/nlab/show/monadicity+theorem'>monadicity theorem</a></p>
+</li>
+
+<li>
+<p><a class='existingWikiWord' href='/nlab/show/adjoint+lifting+theorem'>adjoint lifting theorem</a></p>
+</li>
+
+<li>
+<p><a class='existingWikiWord' href='/nlab/show/Tannaka+duality'>Tannaka duality</a></p>
+</li>
+
+<li>
+<p><a class='existingWikiWord' href='/nlab/show/Gabriel-Ulmer+duality'>Gabriel-Ulmer duality</a></p>
+</li>
+
+<li>
+<p><a class='existingWikiWord' href='/nlab/show/small+object+argument'>small object argument</a></p>
+</li>
+
+<li>
+<p><a class='existingWikiWord' href='/nlab/show/Freyd-Mitchell+embedding+theorem'>Freyd-Mitchell embedding theorem</a></p>
+</li>
+
+<li>
+<p><a class='existingWikiWord' href='/nlab/show/relation+between+type+theory+and+category+theory'>relation between type theory and category theory</a></p>
+</li>
+</ul>
+
+<h2 id='extensions'>Extensions</h2>
+
+<ul>
+<li>
+<p><a class='existingWikiWord' href='/nlab/show/sheaf+and+topos+theory'>sheaf and topos theory</a></p>
+</li>
+
+<li>
+<p><a class='existingWikiWord' href='/nlab/show/enriched+category+theory'>enriched category theory</a></p>
+</li>
+
+<li>
+<p><a class='existingWikiWord' href='/nlab/show/higher+category+theory'>higher category theory</a></p>
+</li>
+</ul>
+
+<h2 id='applications'>Applications</h2>
+
+<ul>
+<li><a class='existingWikiWord' href='/nlab/show/applications+of+%28higher%29+category+theory'>applications of (higher) category theory</a></li>
+</ul>
+<div>
+<p>
+  <a href='/nlab/edit/category+theory+-+contents'>Edit this sidebar</a>
+</p>
+</div></div>
+
+<h4 id='topos_theory'>Topos Theory</h4>
+
+<div class='hide'>
+<p><strong><a class='existingWikiWord' href='/nlab/show/sheaf+and+topos+theory'>topos theory</a></strong></p>
+
+<ul>
+<li><a class='existingWikiWord' href='/nlab/show/Topos'>Toposes</a></li>
+</ul>
+
+<h2 id='background'>Background</h2>
+
+<ul>
+<li>
+<p><a class='existingWikiWord' href='/nlab/show/category+theory'>category theory</a></p>
+
+<ul>
+<li>
+<p><a class='existingWikiWord' href='/nlab/show/category'>category</a></p>
+</li>
+
+<li>
+<p><a class='existingWikiWord' href='/nlab/show/functor'>functor</a></p>
+</li>
+</ul>
+</li>
+</ul>
+
+<h2 id='toposes'>Toposes</h2>
+
+<ul>
+<li>
+<p><a class='existingWikiWord' href='/nlab/show/%280%2C1%29-topos'>(0,1)-topos</a>, <a class='existingWikiWord' href='/nlab/show/Heyting+algebra'>Heyting algebra</a>, <a class='existingWikiWord' href='/nlab/show/locale'>locale</a></p>
+</li>
+
+<li>
+<p><a class='existingWikiWord' href='/nlab/show/pretopos'>pretopos</a></p>
+</li>
+
+<li>
+<p><a class='existingWikiWord' href='/nlab/show/topos'>topos</a></p>
+
+<ul>
+<li>
+<p><a class='existingWikiWord' href='/nlab/show/Grothendieck+topos'>Grothendieck topos</a></p>
+
+<ul>
+<li>
+<p><a class='existingWikiWord' href='/nlab/show/category+of+presheaves'>category of presheaves</a></p>
+
+<ul>
+<li>
+<p><a class='existingWikiWord' href='/nlab/show/presheaf'>presheaf</a></p>
+</li>
+
+<li>
+<p><a class='existingWikiWord' href='/nlab/show/representable+functor'>representable presheaf</a></p>
+</li>
+</ul>
+</li>
+
+<li>
+<p><a class='existingWikiWord' href='/nlab/show/category+of+sheaves'>category of sheaves</a></p>
+
+<ul>
+<li>
+<p><a class='existingWikiWord' href='/nlab/show/site'>site</a></p>
+
+<ul>
+<li>
+<p><a class='existingWikiWord' href='/nlab/show/sieve'>sieve</a></p>
+</li>
+
+<li>
+<p><a class='existingWikiWord' href='/nlab/show/coverage'>coverage</a>, <a class='existingWikiWord' href='/nlab/show/Grothendieck+pretopology'>pretopology</a>, <a class='existingWikiWord' href='/nlab/show/Grothendieck+topology'>topology</a></p>
+</li>
+</ul>
+</li>
+
+<li>
+<p><a class='existingWikiWord' href='/nlab/show/sheaf'>sheaf</a></p>
+</li>
+
+<li>
+<p><a class='existingWikiWord' href='/nlab/show/sheafification'>sheafification</a></p>
+</li>
+</ul>
+</li>
+</ul>
+</li>
+</ul>
+</li>
+
+<li>
+<p><a class='existingWikiWord' href='/nlab/show/quasitopos'>quasitopos</a></p>
+</li>
+
+<li>
+<p><a class='existingWikiWord' href='/nlab/show/base+topos'>base topos</a>, <a class='existingWikiWord' href='/nlab/show/indexed+topos'>indexed topos</a></p>
+</li>
+</ul>
+
+<h2 id='internal_logic'>Internal Logic</h2>
+
+<ul>
+<li>
+<p><a class='existingWikiWord' href='/nlab/show/categorical+semantics'>categorical semantics</a></p>
+</li>
+
+<li>
+<p><a class='existingWikiWord' href='/nlab/show/internal+logic'>internal logic</a></p>
+
+<ul>
+<li>
+<p><a class='existingWikiWord' href='/nlab/show/subobject+classifier'>subobject classifier</a></p>
+</li>
+
+<li>
+<p><a class='existingWikiWord' href='/nlab/show/natural+numbers+object'>natural numbers object</a></p>
+</li>
+</ul>
+</li>
+</ul>
+
+<h2 id='topos_morphisms'>Topos morphisms</h2>
+
+<ul>
+<li>
+<p><a class='existingWikiWord' href='/nlab/show/logical+functor'>logical morphism</a></p>
+</li>
+
+<li>
+<p><a class='existingWikiWord' href='/nlab/show/geometric+morphism'>geometric morphism</a></p>
+
+<ul>
+<li>
+<p><a class='existingWikiWord' href='/nlab/show/direct+image'>direct image</a>/<a class='existingWikiWord' href='/nlab/show/inverse+image'>inverse image</a></p>
+</li>
+
+<li>
+<p><a class='existingWikiWord' href='/nlab/show/global+section'>global sections</a></p>
+</li>
+
+<li>
+<p><a class='existingWikiWord' href='/nlab/show/geometric+embedding'>geometric embedding</a></p>
+</li>
+
+<li>
+<p><a class='existingWikiWord' href='/nlab/show/surjective+geometric+morphism'>surjective geometric morphism</a></p>
+</li>
+
+<li>
+<p><a class='existingWikiWord' href='/nlab/show/essential+geometric+morphism'>essential geometric morphism</a></p>
+
+<ul>
+<li>
+<p><a class='existingWikiWord' href='/nlab/show/locally+connected+geometric+morphism'>locally connected geometric morphism</a></p>
+</li>
+
+<li>
+<p><a class='existingWikiWord' href='/nlab/show/connected+topos'>connected geometric morphism</a></p>
+</li>
+
+<li>
+<p><a class='existingWikiWord' href='/nlab/show/totally+connected+geometric+morphism'>totally connected geometric morphism</a></p>
+</li>
+</ul>
+</li>
+
+<li>
+<p><a class='existingWikiWord' href='/nlab/show/%C3%A9tale+geometric+morphism'>étale geometric morphism</a></p>
+</li>
+
+<li>
+<p><a class='existingWikiWord' href='/nlab/show/open+geometric+morphism'>open geometric morphism</a></p>
+</li>
+
+<li>
+<p><a class='existingWikiWord' href='/nlab/show/proper+geometric+morphism'>proper geometric morphism</a>, <a class='existingWikiWord' href='/nlab/show/proper+geometric+morphism'>compact topos</a></p>
+</li>
+
+<li>
+<p><a class='existingWikiWord' href='/nlab/show/separated+geometric+morphism'>separated geometric morphism</a>, <a class='existingWikiWord' href='/nlab/show/separated+geometric+morphism'>Hausdorff topos</a></p>
+</li>
+
+<li>
+<p><a class='existingWikiWord' href='/nlab/show/local+geometric+morphism'>local geometric morphism</a></p>
+</li>
+
+<li>
+<p><a class='existingWikiWord' href='/nlab/show/bounded+geometric+morphism'>bounded geometric morphism</a></p>
+</li>
+
+<li>
+<p><a class='existingWikiWord' href='/nlab/show/base+change'>base change</a></p>
+</li>
+
+<li>
+<p><a class='existingWikiWord' href='/nlab/show/localic+geometric+morphism'>localic geometric morphism</a></p>
+</li>
+
+<li>
+<p><a class='existingWikiWord' href='/nlab/show/hyperconnected+geometric+morphism'>hyperconnected geometric morphism</a></p>
+</li>
+
+<li>
+<p><a class='existingWikiWord' href='/nlab/show/atomic+geometric+morphism'>atomic geometric morphism</a></p>
+</li>
+</ul>
+</li>
+</ul>
+
+<h2 id='extra_stuff_structure_properties'>Extra stuff, structure, properties</h2>
+
+<ul>
+<li>
+<p><a class='existingWikiWord' href='/nlab/show/topological+locale'>topological locale</a></p>
+</li>
+
+<li>
+<p><a class='existingWikiWord' href='/nlab/show/localic+topos'>localic topos</a></p>
+</li>
+
+<li>
+<p><a class='existingWikiWord' href='/nlab/show/big+and+little+toposes'>petit topos/gros topos</a></p>
+</li>
+
+<li>
+<p><a class='existingWikiWord' href='/nlab/show/locally+connected+topos'>locally connected topos</a>, <a class='existingWikiWord' href='/nlab/show/connected+topos'>connected topos</a>, <a class='existingWikiWord' href='/nlab/show/totally+connected+geometric+morphism'>totally connected topos</a>, <a class='existingWikiWord' href='/nlab/show/strongly+connected+topos'>strongly connected topos</a></p>
+</li>
+
+<li>
+<p><a class='existingWikiWord' href='/nlab/show/local+geometric+morphism'>local topos</a></p>
+</li>
+
+<li>
+<p><a class='existingWikiWord' href='/nlab/show/cohesive+topos'>cohesive topos</a></p>
+</li>
+
+<li>
+<p><a class='existingWikiWord' href='/nlab/show/classifying+topos'>classifying topos</a></p>
+</li>
+
+<li>
+<p><a class='existingWikiWord' href='/nlab/show/smooth+topos'>smooth topos</a></p>
+</li>
+</ul>
+
+<h2 id='cohomology_and_homotopy'>Cohomology and homotopy</h2>
+
+<ul>
+<li>
+<p><a class='existingWikiWord' href='/nlab/show/cohomology'>cohomology</a></p>
+</li>
+
+<li>
+<p><a class='existingWikiWord' href='/nlab/show/homotopy+groups+in+an+%28infinity%2C1%29-topos'>homotopy</a></p>
+</li>
+
+<li>
+<p><a class='existingWikiWord' href='/nlab/show/abelian+sheaf+cohomology'>abelian sheaf cohomology</a></p>
+</li>
+
+<li>
+<p><a class='existingWikiWord' href='/nlab/show/model+structure+on+simplicial+presheaves'>model structure on simplicial presheaves</a></p>
+</li>
+</ul>
+
+<h2 id='in_higher_category_theory'>In higher category theory</h2>
+
+<ul>
+<li>
+<p><a class='existingWikiWord' href='/nlab/show/higher+topos+theory'>higher topos theory</a></p>
+</li>
+
+<li>
+<p><a class='existingWikiWord' href='/nlab/show/%280%2C1%29-topos'>(0,1)-topos</a></p>
+
+<ul>
+<li><a class='existingWikiWord' href='/nlab/show/posite'>(0,1)-site</a></li>
+</ul>
+</li>
+
+<li>
+<p><a class='existingWikiWord' href='/nlab/show/2-topos'>2-topos</a></p>
+
+<ul>
+<li>
+<p><a class='existingWikiWord' href='/nlab/show/2-site'>2-site</a></p>
+</li>
+
+<li>
+<p><a class='existingWikiWord' href='/nlab/show/2-sheaf'>2-sheaf</a>, <a class='existingWikiWord' href='/nlab/show/stack'>stack</a></p>
+</li>
+</ul>
+</li>
+
+<li>
+<p><a class='existingWikiWord' href='/nlab/show/%28infinity%2C1%29-topos'>(∞,1)-topos</a></p>
+
+<ul>
+<li>
+<p><a class='existingWikiWord' href='/nlab/show/%28infinity%2C1%29-site'>(∞,1)-site</a></p>
+</li>
+
+<li>
+<p><a class='existingWikiWord' href='/nlab/show/%28infinity%2C1%29-sheaf'>(∞,1)-sheaf</a>, <a class='existingWikiWord' href='/nlab/show/infinity-stack'>∞-stack</a>, <a class='existingWikiWord' href='/nlab/show/derived+stack'>derived stack</a></p>
+</li>
+</ul>
+</li>
+</ul>
+
+<h2 id='theorems_2'>Theorems</h2>
+
+<ul>
+<li>
+<p><a class='existingWikiWord' href='/nlab/show/Diaconescu%27s+theorem'>Diaconescu&#39;s theorem</a></p>
+</li>
+
+<li>
+<p><a class='existingWikiWord' href='/nlab/show/Barr%27s+theorem'>Barr&#39;s theorem</a></p>
+</li>
+</ul>
+<div>
+<p>
+  <a href='/nlab/edit/topos+theory+-+contents'>Edit this sidebar</a>
+</p>
+</div></div>
+</div>
+</div>
+
+<h1 id='contents'>Contents</h1>
+<div class='maruku_toc'><ul><li><a href='#idea'>Idea</a></li><li><a href='#definition'>Definition</a></li><li><a href='#properties'>Properties</a></li><li><a href='#example'>Example</a></li><li><a href='#related_entries'>Related entries</a></li><li><a href='#references'>References</a></li></ul></div>
+<h2 id='idea'>Idea</h2>
+
+<p>A <strong>Scott topos</strong> is a topos-theoretic generalization of the <a class='existingWikiWord' href='/nlab/show/Scott+topology'>Scott topology</a> on a domain.</p>
+
+<h2 id='definition'>Definition</h2>
+
+<p>The following definition is due to Karazeris (<a href='#Kar01'>2001</a>).</p>
+
+<div class='num_defn'>
+<h6 id='definition_2'>Definition</h6>
+
+<p>Let <math class='maruku-mathml' display='inline' id='mathml_79066e24a9724b2aec542b552d3eddb94c5487da_1' xmlns='http://www.w3.org/1998/Math/MathML'><semantics><mrow><mi>𝒦</mi></mrow><annotation encoding='application/x-tex'>\mathcal{K}</annotation></semantics></math> be a <a class='existingWikiWord' href='/nlab/show/accessible+category'>finitely accessible category</a> and <math class='maruku-mathml' display='inline' id='mathml_79066e24a9724b2aec542b552d3eddb94c5487da_2' xmlns='http://www.w3.org/1998/Math/MathML'><semantics><mrow><msub><mi>𝒦</mi> <mi>f</mi></msub></mrow><annotation encoding='application/x-tex'>\mathcal{K}_f</annotation></semantics></math> the full subcategory of its <a class='existingWikiWord' href='/nlab/show/compact+object'>finitely presentable objects</a>. The topos <math class='maruku-mathml' display='inline' id='mathml_79066e24a9724b2aec542b552d3eddb94c5487da_3' xmlns='http://www.w3.org/1998/Math/MathML'><semantics><mrow><msup><mi>Set</mi> <mrow><msub><mi>𝒦</mi> <mi>f</mi></msub></mrow></msup></mrow><annotation encoding='application/x-tex'>Set^{\mathcal{K}_f}</annotation></semantics></math> is called the <strong>Scott topos</strong> of <math class='maruku-mathml' display='inline' id='mathml_79066e24a9724b2aec542b552d3eddb94c5487da_4' xmlns='http://www.w3.org/1998/Math/MathML'><semantics><mrow><mi>𝒦</mi></mrow><annotation encoding='application/x-tex'>\mathcal{K}</annotation></semantics></math> and denoted by <math class='maruku-mathml' display='inline' id='mathml_79066e24a9724b2aec542b552d3eddb94c5487da_5' xmlns='http://www.w3.org/1998/Math/MathML'><semantics><mrow><mi>σ</mi><mi>𝒦</mi></mrow><annotation encoding='application/x-tex'>\sigma\mathcal{K}</annotation></semantics></math>.</p>
+</div>
+
+<h2 id='properties'>Properties</h2>
+
+<p>…</p>
+
+<h2 id='example'>Example</h2>
+
+<p>…</p>
+
+<h2 id='related_entries'>Related entries</h2>
+
+<ul>
+<li>
+<p><a class='existingWikiWord' href='/nlab/show/Scott+topology'>Scott topology</a></p>
+</li>
+
+<li>
+<p><a class='existingWikiWord' href='/nlab/show/domain+theory'>domain theory</a></p>
+</li>
+
+<li>
+<p><a class='existingWikiWord' href='/nlab/show/accessible+category'>accessible category</a></p>
+</li>
+
+<li>
+<p><a class='existingWikiWord' href='/nlab/show/exponentiable+topos'>exponentiable topos</a></p>
+</li>
+
+<li>
+<p><a class='existingWikiWord' href='/nlab/show/Dana+Scott'>Dana Scott</a></p>
+</li>
+</ul>
+
+<h2 id='references'>References</h2>
+
+<ul>
+<li>
+<p><a class='existingWikiWord' href='/nlab/show/Ji%C5%99%C3%AD+Ad%C3%A1mek'>J. Adámek</a>, <em>A categorical generalization of Scott domains</em> , Math. Struc. Comp. Sci. <strong>7</strong> pp.419-443.</p>
+</li>
+
+<li id='Kar01'>
+<p>P. Karazeris, <em>Categorical Domain Theory: Scott Topology, Powercategories, Coherent Categories</em> , TAC <strong>9</strong> (2001) pp.106-120. (<a href='http://www.tac.mta.ca/tac/volumes/9/n6/9-06abs.html'>abstract</a>)</p>
+</li>
+
+<li>
+<p>J. Velebil, <em>Categorical Generalization of a Universal Domain</em> , Appl. Cat. Struc. <strong>7</strong> (1999) pp.209-226.</p>
+</li>
+</ul>
 </div>
 
 <div class="revisedby">
-  Revised on August 21, 2015 13:59:54 
-  by <a class="existingWikiWord" href="/nlab/show/Toby+Bartels">Toby Bartels</a>
-  (64.89.58.198)
+  Revised on March 13, 2018 11:48:57 
+  by <a class="existingWikiWord" href="/nlab/show/Thomas+Holder">Thomas Holder</a>
+  (89.204.130.18)
 </div>
 
 <div class="navigation navfoot">
 
-  <a href="/nlab/edit/empty+109" accesskey="E" class="navlink" id="edit" rel="nofollow">Edit</a> | <a href="/nlab/revision/empty+109/3" accesskey="B" class="navlink" id="to_previous_revision" rel="nofollow">Back in time</a> <span class='revisions'>(3 revisions)</span> | <a href="/nlab/show/diff/empty+109" accesskey="C" class="navlink" id="see_changes" rel="nofollow">See changes</a> | <a href="/nlab/history/empty+109" accesskey="S" class="navlink" id="history" rel="nofollow">History</a>
+  <a href="/nlab/edit/Scott+topos" accesskey="E" class="navlink" id="edit" rel="nofollow">Edit</a> | <a href="/nlab/revision/Scott+topos/4" accesskey="B" class="navlink" id="to_previous_revision" rel="nofollow">Back in time</a> <span class='revisions'>(4 revisions)</span> | <a href="/nlab/show/diff/Scott+topos" accesskey="C" class="navlink" id="see_changes" rel="nofollow">See changes</a> | <a href="/nlab/history/Scott+topos" accesskey="S" class="navlink" id="history" rel="nofollow">History</a>
   
   <span class="views">
     | Views: 
-    <a href="/nlab/print/empty+109" accesskey="p" id="view_print" rel="nofollow">Print</a>
+    <a href="/nlab/print/Scott+topos" accesskey="p" id="view_print" rel="nofollow">Print</a>
     | 
-    <a href="/nlab/tex/empty+109" id="view_tex" rel="nofollow">TeX</a>
+    <a href="/nlab/tex/Scott+topos" id="view_tex" rel="nofollow">TeX</a>
     |
-    <a href="/nlab/source/empty+109" id="view_source" rel="nofollow">Source</a>
+    <a href="/nlab/source/Scott+topos" id="view_source" rel="nofollow">Source</a>
   </span>
 
   
