--- a/pages/3898.html
+++ b/pages/3898.html
@@ -781,7 +781,7 @@ margin-left: 0em;
 </div>
 
 <h1 id='contents'>Contents</h1>
-<div class='maruku_toc'><ul><li><a href='#definition'>Definition</a></li><li><a href='#properties'>Properties</a><ul><li><a href='#as_injective_objects_in_spaces'>As injective objects in <math class='maruku-mathml' display='inline' id='mathml_98b8addc8e218604a94cbf139a9095ef0dcf10fd_1' xmlns='http://www.w3.org/1998/Math/MathML'><semantics><mrow><msub><mi>T</mi> <mn>0</mn></msub></mrow><annotation encoding='application/x-tex'>T_0</annotation></semantics></math>-spaces</a></li></ul></li><li><a href='#related_concepts'>Related concepts</a></li></ul></div>
+<div class='maruku_toc'><ul><li><a href='#definition'>Definition</a></li><li><a href='#properties'>Properties</a><ul><li><a href='#as_injective_objects_in_spaces'>As injective objects in <math class='maruku-mathml' display='inline' id='mathml_7133836ea4a8e65afe6636740fa05a4397da7500_1' xmlns='http://www.w3.org/1998/Math/MathML'><semantics><mrow><msub><mi>T</mi> <mn>0</mn></msub></mrow><annotation encoding='application/x-tex'>T_0</annotation></semantics></math>-spaces</a></li></ul></li><li><a href='#related_entries'>Related entries</a></li></ul></div>
 <h2 id='definition'>Definition</h2>
 
 <p>The <strong>Scott topology</strong> on a <a class='existingWikiWord' href='/nlab/show/preorder'>preordered set</a> is the <a class='existingWikiWord' href='/nlab/show/topological+space'>topology</a> in which the <a class='existingWikiWord' href='/nlab/show/open+subspace'>open subsets</a> (called <strong>Scott-open</strong>) are precisely those whose <a class='existingWikiWord' href='/nlab/show/characteristic+function'>characteristic functions</a> (from the given preorder into the preorder of <a class='existingWikiWord' href='/nlab/show/truth+value'>truth values</a>) preserve <a class='existingWikiWord' href='/nlab/show/directed+join'>directed joins</a> (and this makes them necessarily <a class='existingWikiWord' href='/nlab/show/monotone+function'>monotonic</a>).</p>
@@ -790,11 +790,11 @@ margin-left: 0em;
 
 <h2 id='properties'>Properties</h2>
 
-<h3 id='as_injective_objects_in_spaces'>As injective objects in <math class='maruku-mathml' display='inline' id='mathml_98b8addc8e218604a94cbf139a9095ef0dcf10fd_2' xmlns='http://www.w3.org/1998/Math/MathML'><semantics><mrow><msub><mi>T</mi> <mn>0</mn></msub></mrow><annotation encoding='application/x-tex'>T_0</annotation></semantics></math>-spaces</h3>
+<h3 id='as_injective_objects_in_spaces'>As injective objects in <math class='maruku-mathml' display='inline' id='mathml_7133836ea4a8e65afe6636740fa05a4397da7500_2' xmlns='http://www.w3.org/1998/Math/MathML'><semantics><mrow><msub><mi>T</mi> <mn>0</mn></msub></mrow><annotation encoding='application/x-tex'>T_0</annotation></semantics></math>-spaces</h3>
 
-<p>In the category of <math class='maruku-mathml' display='inline' id='mathml_98b8addc8e218604a94cbf139a9095ef0dcf10fd_3' xmlns='http://www.w3.org/1998/Math/MathML'><semantics><mrow><msub><mi>T</mi> <mn>0</mn></msub></mrow><annotation encoding='application/x-tex'>T_0</annotation></semantics></math> <a class='existingWikiWord' href='/nlab/show/topological+space'>topological spaces</a> (see at <em><a class='existingWikiWord' href='/nlab/show/separation+axioms'>separation axiom</a></em>), the <a class='existingWikiWord' href='/nlab/show/injective+object'>injective objects</a> are precisely those given by Scott topologies on <a class='existingWikiWord' href='/nlab/show/continuous+poset'>continuous lattices</a>; as <a class='existingWikiWord' href='/nlab/show/locale'>locales</a> these are <a class='existingWikiWord' href='/nlab/show/locally+compact+topological+space'>locally compact</a> and <a class='existingWikiWord' href='/nlab/show/topological+locale'>spatial</a>.</p>
+<p>In the category of <math class='maruku-mathml' display='inline' id='mathml_7133836ea4a8e65afe6636740fa05a4397da7500_3' xmlns='http://www.w3.org/1998/Math/MathML'><semantics><mrow><msub><mi>T</mi> <mn>0</mn></msub></mrow><annotation encoding='application/x-tex'>T_0</annotation></semantics></math> <a class='existingWikiWord' href='/nlab/show/topological+space'>topological spaces</a> (see at <em><a class='existingWikiWord' href='/nlab/show/separation+axioms'>separation axiom</a></em>), the <a class='existingWikiWord' href='/nlab/show/injective+object'>injective objects</a> are precisely those given by Scott topologies on <a class='existingWikiWord' href='/nlab/show/continuous+poset'>continuous lattices</a>; as <a class='existingWikiWord' href='/nlab/show/locale'>locales</a> these are <a class='existingWikiWord' href='/nlab/show/locally+compact+topological+space'>locally compact</a> and <a class='existingWikiWord' href='/nlab/show/topological+locale'>spatial</a>.</p>
 
-<h2 id='related_concepts'>Related concepts</h2>
+<h2 id='related_entries'>Related entries</h2>
 
 <ul>
 <li>
@@ -807,6 +807,14 @@ margin-left: 0em;
 
 <li>
 <p><a class='existingWikiWord' href='/nlab/show/order+topology'>order topology</a></p>
+</li>
+
+<li>
+<p><a class='existingWikiWord' href='/nlab/show/Scott+topos'>Scott topos</a></p>
+</li>
+
+<li>
+<p><a class='existingWikiWord' href='/nlab/show/Dana+Scott'>Dana Scott</a></p>
 </li>
 </ul>
 
@@ -848,14 +856,14 @@ margin-left: 0em;
 </div>
 
 <div class="revisedby">
-  Revised on May  1, 2017 03:49:08 
-  by <a class="existingWikiWord" href="/nlab/show/Urs+Schreiber">Urs Schreiber</a>
-  (92.218.150.85)
+  Revised on March 13, 2018 11:47:36 
+  by <a class="existingWikiWord" href="/nlab/show/Thomas+Holder">Thomas Holder</a>
+  (89.204.130.18)
 </div>
 
 <div class="navigation navfoot">
 
-  <a href="/nlab/edit/Scott+topology" accesskey="E" class="navlink" id="edit" rel="nofollow">Edit</a> | <a href="/nlab/revision/Scott+topology/6" accesskey="B" class="navlink" id="to_previous_revision" rel="nofollow">Back in time</a> <span class='revisions'>(6 revisions)</span> | <a href="/nlab/show/diff/Scott+topology" accesskey="C" class="navlink" id="see_changes" rel="nofollow">See changes</a> | <a href="/nlab/history/Scott+topology" accesskey="S" class="navlink" id="history" rel="nofollow">History</a>
+  <a href="/nlab/edit/Scott+topology" accesskey="E" class="navlink" id="edit" rel="nofollow">Edit</a> | <a href="/nlab/revision/Scott+topology/7" accesskey="B" class="navlink" id="to_previous_revision" rel="nofollow">Back in time</a> <span class='revisions'>(7 revisions)</span> | <a href="/nlab/show/diff/Scott+topology" accesskey="C" class="navlink" id="see_changes" rel="nofollow">See changes</a> | <a href="/nlab/history/Scott+topology" accesskey="S" class="navlink" id="history" rel="nofollow">History</a>
   
   <span class="views">
     | Views: 
