--- a/pages/7011.html
+++ b/pages/7011.html
@@ -323,10 +323,10 @@ margin-left: 0em;
 </li>
 
 <li>
-<p><a class='existingWikiWord' href='/nlab/show/sequent'>hypothetical judgement</a>, <a class='existingWikiWord' href='/nlab/show/sequent'>sequent</a></p>
+<p><a class='existingWikiWord' href='/nlab/show/judgment'>hypothetical judgement</a>, <a class='existingWikiWord' href='/nlab/show/sequent'>sequent</a></p>
 
 <ul>
-<li><a class='existingWikiWord' href='/nlab/show/antecedent'>antecedents</a> <math class='maruku-mathml' display='inline' id='mathml_7a090688c1807484e309661e5bd4947bb05fc5ee_1' xmlns='http://www.w3.org/1998/Math/MathML'><semantics><mrow><mo>⊢</mo></mrow><annotation encoding='application/x-tex'>\vdash</annotation></semantics></math> <a class='existingWikiWord' href='/nlab/show/consequent'>consequent</a>, <a class='existingWikiWord' href='/nlab/show/succedent'>succedents</a></li>
+<li><a class='existingWikiWord' href='/nlab/show/antecedent'>antecedents</a> <math class='maruku-mathml' display='inline' id='mathml_6d91ac3fa98ca40c819bfa4eb66cffb96d66cb90_1' xmlns='http://www.w3.org/1998/Math/MathML'><semantics><mrow><mo>⊢</mo></mrow><annotation encoding='application/x-tex'>\vdash</annotation></semantics></math> <a class='existingWikiWord' href='/nlab/show/consequent'>consequent</a>, <a class='existingWikiWord' href='/nlab/show/succedent'>succedents</a></li>
 </ul>
 </li>
 </ul>
@@ -492,21 +492,21 @@ margin-left: 0em;
 <p>A rephrasing of the Coq-proofs given there in terms of ordinary language is given in</p>
 
 <ul>
-<li>Carlo Angiuli, <em>Univalence implies function extensionality</em> (<a href='http://homotopytypetheory.org/2011/12/05/hott-in-prose/'>blog</a>, <a href='http://hottheory.files.wordpress.com/2011/12/hott1.pdf'>pdf</a>)</li>
+<li>Carlo Angiuli, <em>Univalence implies function extensionality</em> (<a href='http://homotopytypetheory.org/2011/12/05/hott-in-prose/'>blog</a>, <a href='http://hottheory.files.wordpress.com/2011/12/hott2.pdf'>pdf</a>)</li>
 </ul>
 
 <p><div class='property'> category: <a class='category_link' href='/nlab/list/reference'>reference</a></div></p>
 </div>
 
 <div class="revisedby">
-  Revised on January 14, 2012 07:38:52 
-  by <a class="existingWikiWord" href="/nlab/show/Urs+Schreiber">Urs Schreiber</a>
-  (89.204.130.46)
+  Revised on March 13, 2018 14:42:30 
+  by <span class="newWikiWord">Carlo Angiuli<a href="/nlab/new/Carlo+Angiuli">?</a></span>
+  (128.2.214.21)
 </div>
 
 <div class="navigation navfoot">
 
-  <a href="/nlab/edit/Oberwolfach+HoTT-Coq+tutorial" accesskey="E" class="navlink" id="edit" rel="nofollow">Edit</a> | <a href="/nlab/revision/Oberwolfach+HoTT-Coq+tutorial/2" accesskey="B" class="navlink" id="to_previous_revision" rel="nofollow">Back in time</a> <span class='revisions'>(2 revisions)</span> | <a href="/nlab/show/diff/Oberwolfach+HoTT-Coq+tutorial" accesskey="C" class="navlink" id="see_changes" rel="nofollow">See changes</a> | <a href="/nlab/history/Oberwolfach+HoTT-Coq+tutorial" accesskey="S" class="navlink" id="history" rel="nofollow">History</a>
+  <a href="/nlab/edit/Oberwolfach+HoTT-Coq+tutorial" accesskey="E" class="navlink" id="edit" rel="nofollow">Edit</a> | <a href="/nlab/revision/Oberwolfach+HoTT-Coq+tutorial/3" accesskey="B" class="navlink" id="to_previous_revision" rel="nofollow">Back in time</a> <span class='revisions'>(3 revisions)</span> | <a href="/nlab/show/diff/Oberwolfach+HoTT-Coq+tutorial" accesskey="C" class="navlink" id="see_changes" rel="nofollow">See changes</a> | <a href="/nlab/history/Oberwolfach+HoTT-Coq+tutorial" accesskey="S" class="navlink" id="history" rel="nofollow">History</a>
   
   <span class="views">
     | Views: 
