--- a/pages/19046.html
+++ b/pages/19046.html
@@ -640,7 +640,7 @@ margin-left: 0em;
 </p>
 </div></div>
 
-<h4 id='topos_theory_2'><math class='maruku-mathml' display='inline' id='mathml_b373c305b2b09270520f2f55381360666d8661fa_1' xmlns='http://www.w3.org/1998/Math/MathML'><semantics><mrow><mo stretchy='false'>(</mo><mn>∞</mn><mo>,</mo><mn>1</mn><mo stretchy='false'>)</mo></mrow><annotation encoding='application/x-tex'>(\infty,1)</annotation></semantics></math>-Topos Theory</h4>
+<h4 id='topos_theory_2'><math class='maruku-mathml' display='inline' id='mathml_d12cc0ecd781207d35127c94270069235157c3ef_1' xmlns='http://www.w3.org/1998/Math/MathML'><semantics><mrow><mo stretchy='false'>(</mo><mn>∞</mn><mo>,</mo><mn>1</mn><mo stretchy='false'>)</mo></mrow><annotation encoding='application/x-tex'>(\infty,1)</annotation></semantics></math>-Topos Theory</h4>
 
 <div class='hide'>
 <p><strong><a class='existingWikiWord' href='/nlab/show/%28infinity%2C1%29-topos+theory'>(∞,1)-topos theory</a></strong></p>
@@ -975,20 +975,22 @@ margin-left: 0em;
 </div>
 
 <h1 id='contents'>Contents</h1>
-<div class='maruku_toc'><ul><li><a href='#idea'>Idea</a></li><li><a href='#definition'>Definition</a></li><li><a href='#properties'>Properties</a></li><li><a href='#examples'>Examples</a></li><li><a href='#related_entries'>Related entries</a></li><li><a href='#references'>References</a></li></ul></div>
+<div class='maruku_toc'><ul><li><a href='#idea'>Idea</a></li><li><a href='#definition'>Definition</a><ul><li><a href='#remark'>Remark</a></li></ul></li><li><a href='#properties'>Properties</a></li><li><a href='#examples'>Examples</a></li><li><a href='#related_entries'>Related entries</a></li><li><a href='#references'>References</a></li></ul></div>
 <h2 id='idea'>Idea</h2>
 
-<p>An <strong>exponentiable topos</strong> is a generalization of the notion of an exponentiable <a class='existingWikiWord' href='/nlab/show/locale'>locale</a> and can be viewed as a (topological) “space” <math class='maruku-mathml' display='inline' id='mathml_b373c305b2b09270520f2f55381360666d8661fa_2' xmlns='http://www.w3.org/1998/Math/MathML'><semantics><mrow><mi>X</mi></mrow><annotation encoding='application/x-tex'>X</annotation></semantics></math> that behaves well with respect to the construction of mapping spaces <math class='maruku-mathml' display='inline' id='mathml_b373c305b2b09270520f2f55381360666d8661fa_3' xmlns='http://www.w3.org/1998/Math/MathML'><semantics><mrow><msup><mi>Y</mi> <mi>X</mi></msup></mrow><annotation encoding='application/x-tex'>Y^X</annotation></semantics></math>.</p>
-
-<p>The concept generalizes to <a class='existingWikiWord' href='/nlab/show/higher+topos+theory'>higher topos theory</a>.</p>
+<p>An <strong>exponentiable topos</strong> is a generalization of the notion of an exponentiable <a class='existingWikiWord' href='/nlab/show/locale'>locale</a> and can be viewed as a (topological) “space” <math class='maruku-mathml' display='inline' id='mathml_d12cc0ecd781207d35127c94270069235157c3ef_2' xmlns='http://www.w3.org/1998/Math/MathML'><semantics><mrow><mi>X</mi></mrow><annotation encoding='application/x-tex'>X</annotation></semantics></math> that behaves well with respect to the construction of mapping spaces <math class='maruku-mathml' display='inline' id='mathml_d12cc0ecd781207d35127c94270069235157c3ef_3' xmlns='http://www.w3.org/1998/Math/MathML'><semantics><mrow><msup><mi>Y</mi> <mi>X</mi></msup></mrow><annotation encoding='application/x-tex'>Y^X</annotation></semantics></math>.</p>
 
 <h2 id='definition'>Definition</h2>
 
 <div class='num_defn'>
 <h6 id='definition_2'>Definition</h6>
 
-<p>A <a class='existingWikiWord' href='/nlab/show/Grothendieck+topos'>Grothendieck topos</a> <math class='maruku-mathml' display='inline' id='mathml_b373c305b2b09270520f2f55381360666d8661fa_4' xmlns='http://www.w3.org/1998/Math/MathML'><semantics><mrow><mi>ℰ</mi></mrow><annotation encoding='application/x-tex'>\mathcal{E}</annotation></semantics></math> is called <em>exponentiable</em> (in the <a class='existingWikiWord' href='/nlab/show/2-category'>2-category</a> of Grothendieck toposes) if the 2-functor <math class='maruku-mathml' display='inline' id='mathml_b373c305b2b09270520f2f55381360666d8661fa_5' xmlns='http://www.w3.org/1998/Math/MathML'><semantics><mrow><msub><mrow></mrow> <mo lspace='verythinmathspace' rspace='0em'>−</mo></msub><mo>×</mo><mi>ℰ</mi></mrow><annotation encoding='application/x-tex'>{}_{-}\times\mathcal{E}</annotation></semantics></math> has a right 2-adjoint <math class='maruku-mathml' display='inline' id='mathml_b373c305b2b09270520f2f55381360666d8661fa_6' xmlns='http://www.w3.org/1998/Math/MathML'><semantics><mrow><msub><mo stretchy='false'>(</mo> <mo lspace='verythinmathspace' rspace='0em'>−</mo></msub><msup><mo stretchy='false'>)</mo> <mi>ℰ</mi></msup></mrow><annotation encoding='application/x-tex'>(_{-})^\mathcal{E}</annotation></semantics></math>.</p>
+<p>A <a class='existingWikiWord' href='/nlab/show/Grothendieck+topos'>Grothendieck topos</a> <math class='maruku-mathml' display='inline' id='mathml_d12cc0ecd781207d35127c94270069235157c3ef_4' xmlns='http://www.w3.org/1998/Math/MathML'><semantics><mrow><mi>ℰ</mi></mrow><annotation encoding='application/x-tex'>\mathcal{E}</annotation></semantics></math> is called <em>exponentiable</em> (in the <a class='existingWikiWord' href='/nlab/show/2-category'>2-category</a> of Grothendieck toposes) if the 2-functor <math class='maruku-mathml' display='inline' id='mathml_d12cc0ecd781207d35127c94270069235157c3ef_5' xmlns='http://www.w3.org/1998/Math/MathML'><semantics><mrow><msub><mrow></mrow> <mo lspace='verythinmathspace' rspace='0em'>−</mo></msub><mo>×</mo><mi>ℰ</mi></mrow><annotation encoding='application/x-tex'>{}_{-}\times\mathcal{E}</annotation></semantics></math> has a right 2-adjoint <math class='maruku-mathml' display='inline' id='mathml_d12cc0ecd781207d35127c94270069235157c3ef_6' xmlns='http://www.w3.org/1998/Math/MathML'><semantics><mrow><msub><mo stretchy='false'>(</mo> <mo lspace='verythinmathspace' rspace='0em'>−</mo></msub><msup><mo stretchy='false'>)</mo> <mi>ℰ</mi></msup></mrow><annotation encoding='application/x-tex'>(_{-})^\mathcal{E}</annotation></semantics></math>.</p>
 </div>
+
+<h3 id='remark'>Remark</h3>
+
+<p>The concept generalizes to <a class='existingWikiWord' href='/nlab/show/higher+topos+theory'>higher topos theory</a> (cf. <a href='#AJ18'>Anel-Lejay 2018</a>, <a href='#Lurie18'>Lurie 2018</a>).</p>
 
 <h2 id='properties'>Properties</h2>
 
@@ -997,10 +999,10 @@ margin-left: 0em;
 <div class='num_prop'>
 <h6 id='theorem'>Theorem</h6>
 
-<p>A <a class='existingWikiWord' href='/nlab/show/Grothendieck+topos'>Grothendieck topos</a> <math class='maruku-mathml' display='inline' id='mathml_b373c305b2b09270520f2f55381360666d8661fa_7' xmlns='http://www.w3.org/1998/Math/MathML'><semantics><mrow><mi>ℰ</mi></mrow><annotation encoding='application/x-tex'>\mathcal{E}</annotation></semantics></math> is an exponentiable object in the 2-category of Grothendieck toposes and <a class='existingWikiWord' href='/nlab/show/geometric+morphism'>geometric morphisms</a> iff <math class='maruku-mathml' display='inline' id='mathml_b373c305b2b09270520f2f55381360666d8661fa_8' xmlns='http://www.w3.org/1998/Math/MathML'><semantics><mrow><mi>ℰ</mi></mrow><annotation encoding='application/x-tex'>\mathcal{E}</annotation></semantics></math> is a <a class='existingWikiWord' href='/nlab/show/continuous+category'>continuous category</a>.</p>
+<p>A <a class='existingWikiWord' href='/nlab/show/Grothendieck+topos'>Grothendieck topos</a> <math class='maruku-mathml' display='inline' id='mathml_d12cc0ecd781207d35127c94270069235157c3ef_7' xmlns='http://www.w3.org/1998/Math/MathML'><semantics><mrow><mi>ℰ</mi></mrow><annotation encoding='application/x-tex'>\mathcal{E}</annotation></semantics></math> is an exponentiable object in the 2-category of Grothendieck toposes and <a class='existingWikiWord' href='/nlab/show/geometric+morphism'>geometric morphisms</a> iff <math class='maruku-mathml' display='inline' id='mathml_d12cc0ecd781207d35127c94270069235157c3ef_8' xmlns='http://www.w3.org/1998/Math/MathML'><semantics><mrow><mi>ℰ</mi></mrow><annotation encoding='application/x-tex'>\mathcal{E}</annotation></semantics></math> is a <a class='existingWikiWord' href='/nlab/show/continuous+category'>continuous category</a>.</p>
 </div>
 
-<p>This result is due to Johnstone-Joyal (<a href='#JJ82'>1982</a>) and occurs as theorem 4.4.5 of (<a href='#J02'>Johnstone (2002), p.748</a>).</p>
+<p>This result is due to Johnstone-Joyal (<a href='#JJ82'>1982</a>) and occurs as theorem 4.4.5 of Johnstone (<a href='#J02'>2002, p.748</a>).</p>
 
 <h2 id='examples'>Examples</h2>
 
@@ -1010,7 +1012,7 @@ margin-left: 0em;
 </li>
 
 <li>
-<p>By the same reasoning all functor categories <math class='maruku-mathml' display='inline' id='mathml_b373c305b2b09270520f2f55381360666d8661fa_9' xmlns='http://www.w3.org/1998/Math/MathML'><semantics><mrow><msup><mi>Set</mi> <mi>𝒞</mi></msup></mrow><annotation encoding='application/x-tex'>Set^{\mathcal{C}}</annotation></semantics></math> for <math class='maruku-mathml' display='inline' id='mathml_b373c305b2b09270520f2f55381360666d8661fa_10' xmlns='http://www.w3.org/1998/Math/MathML'><semantics><mrow><mi>𝒞</mi></mrow><annotation encoding='application/x-tex'>\mathcal{C}</annotation></semantics></math> a <a class='existingWikiWord' href='/nlab/show/small+category'>small category</a> are exponentiable since they are <a class='existingWikiWord' href='/nlab/show/locally+finitely+presentable+category'>locally finitely presentable</a>. This includes in particular all <a class='existingWikiWord' href='/nlab/show/category+of+presheaves'>presheaf toposes</a> on small categories.</p>
+<p>By the same reasoning all functor categories <math class='maruku-mathml' display='inline' id='mathml_d12cc0ecd781207d35127c94270069235157c3ef_9' xmlns='http://www.w3.org/1998/Math/MathML'><semantics><mrow><msup><mi>Set</mi> <mi>𝒞</mi></msup></mrow><annotation encoding='application/x-tex'>Set^{\mathcal{C}}</annotation></semantics></math> for <math class='maruku-mathml' display='inline' id='mathml_d12cc0ecd781207d35127c94270069235157c3ef_10' xmlns='http://www.w3.org/1998/Math/MathML'><semantics><mrow><mi>𝒞</mi></mrow><annotation encoding='application/x-tex'>\mathcal{C}</annotation></semantics></math> a <a class='existingWikiWord' href='/nlab/show/small+category'>small category</a> are exponentiable since they are <a class='existingWikiWord' href='/nlab/show/locally+finitely+presentable+category'>locally finitely presentable</a>. This includes in particular all <a class='existingWikiWord' href='/nlab/show/category+of+presheaves'>presheaf toposes</a> on small categories.</p>
 </li>
 </ul>
 
@@ -1084,14 +1086,14 @@ margin-left: 0em;
 </div>
 
 <div class="revisedby">
-  Revised on March 13, 2018 10:16:29 
+  Revised on March 13, 2018 18:34:42 
   by <a class="existingWikiWord" href="/nlab/show/Thomas+Holder">Thomas Holder</a>
-  (82.113.121.136)
+  (89.204.130.20)
 </div>
 
 <div class="navigation navfoot">
 
-  <a href="/nlab/edit/exponentiable+topos" accesskey="E" class="navlink" id="edit" rel="nofollow">Edit</a> | <a href="/nlab/revision/exponentiable+topos/5" accesskey="B" class="navlink" id="to_previous_revision" rel="nofollow">Back in time</a> <span class='revisions'>(5 revisions)</span> | <a href="/nlab/show/diff/exponentiable+topos" accesskey="C" class="navlink" id="see_changes" rel="nofollow">See changes</a> | <a href="/nlab/history/exponentiable+topos" accesskey="S" class="navlink" id="history" rel="nofollow">History</a>
+  <a href="/nlab/edit/exponentiable+topos" accesskey="E" class="navlink" id="edit" rel="nofollow">Edit</a> | <a href="/nlab/revision/exponentiable+topos/6" accesskey="B" class="navlink" id="to_previous_revision" rel="nofollow">Back in time</a> <span class='revisions'>(6 revisions)</span> | <a href="/nlab/show/diff/exponentiable+topos" accesskey="C" class="navlink" id="see_changes" rel="nofollow">See changes</a> | <a href="/nlab/history/exponentiable+topos" accesskey="S" class="navlink" id="history" rel="nofollow">History</a>
   
   <span class="views">
     | Views: 
