--- a/pages/18655.html
+++ b/pages/18655.html
@@ -315,18 +315,20 @@ margin-left: 0em;
 <li><a href='http://maxsnew.github.io/'>webpage</a></li>
 </ul>
 
+<p>I am a computer scientist, currently working on the semantics of <span class='newWikiWord'>gradual typing<a href='/nlab/new/gradual+typing'>?</a></span>.</p>
+
 <p><div class='property'> category: <a class='category_link' href='/nlab/list/people'>people</a></div></p>
 </div>
 
 <div class="revisedby">
-  Revised on December 15, 2017 10:26:22 
+  Revised on March 14, 2018 13:30:44 
   by <a class="existingWikiWord" href="/nlab/show/Max+S.+New">Max S. New</a>
   (129.10.110.48)
 </div>
 
 <div class="navigation navfoot">
 
-  <a href="/nlab/edit/Max+S.+New" accesskey="E" class="navlink" id="edit" rel="nofollow">Edit</a> | <a href="/nlab/revision/Max+S.+New/1" accesskey="B" class="navlink" id="to_previous_revision" rel="nofollow">Back in time</a> <span class='revisions'>(1 revision)</span> | <a href="/nlab/show/diff/Max+S.+New" accesskey="C" class="navlink" id="see_changes" rel="nofollow">See changes</a> | <a href="/nlab/history/Max+S.+New" accesskey="S" class="navlink" id="history" rel="nofollow">History</a>
+  <a href="/nlab/edit/Max+S.+New" accesskey="E" class="navlink" id="edit" rel="nofollow">Edit</a> | <a href="/nlab/revision/Max+S.+New/2" accesskey="B" class="navlink" id="to_previous_revision" rel="nofollow">Back in time</a> <span class='revisions'>(2 revisions)</span> | <a href="/nlab/show/diff/Max+S.+New" accesskey="C" class="navlink" id="see_changes" rel="nofollow">See changes</a> | <a href="/nlab/history/Max+S.+New" accesskey="S" class="navlink" id="history" rel="nofollow">History</a>
   
   <span class="views">
     | Views: 
