--- a/pages/15519.html
+++ b/pages/15519.html
@@ -257,8 +257,8 @@ margin-left: 0em;
     //--><!]]>
   </script>
 
-  	<link href="http://nlab-local/nlab/atom_with_headlines" rel="alternate" title="Atom with headlines" type="application/atom+xml" />
-  	<link href="http://nlab-local/nlab/atom_with_content" rel="alternate" title="Atom with full content" type="application/atom+xml" />
+  	<link href="https://ncatlab.org/nlab/atom_with_headlines" rel="alternate" title="Atom with headlines" type="application/atom+xml" />
+  	<link href="https://ncatlab.org/nlab/atom_with_content" rel="alternate" title="Atom with full content" type="application/atom+xml" />
   <script type="text/javascript">
   document.observe("dom:loaded", function() {
     generateThmNumbers();
@@ -640,7 +640,7 @@ margin-left: 0em;
 </p>
 </div></div>
 
-<h4 id='topos_theory_2'><math class='maruku-mathml' display='inline' id='mathml_5d4055195fe9a6075ccd8cb64cfa5c2db4b51be8_1' xmlns='http://www.w3.org/1998/Math/MathML'><semantics><mrow><mo stretchy='false'>(</mo><mn>∞</mn><mo>,</mo><mn>1</mn><mo stretchy='false'>)</mo></mrow><annotation encoding='application/x-tex'>(\infty,1)</annotation></semantics></math>-Topos Theory</h4>
+<h4 id='topos_theory_2'><math class='maruku-mathml' display='inline' id='mathml_a9f488fea782f9ada676d8fe3b1c24724ebc8615_1' xmlns='http://www.w3.org/1998/Math/MathML'><semantics><mrow><mo stretchy='false'>(</mo><mn>∞</mn><mo>,</mo><mn>1</mn><mo stretchy='false'>)</mo></mrow><annotation encoding='application/x-tex'>(\infty,1)</annotation></semantics></math>-Topos Theory</h4>
 
 <div class='hide'>
 <p><strong><a class='existingWikiWord' href='/nlab/show/%28infinity%2C1%29-topos+theory'>(∞,1)-topos theory</a></strong></p>
@@ -975,16 +975,24 @@ margin-left: 0em;
 </div>
 
 <h1 id='contents'>Contents</h1>
-<div class='maruku_toc'><ul><li><a href='#idea'>Idea</a></li><li><a href='#definition'>Definition</a></li><li><a href='#properties'>Properties</a></li><li><a href='#related_entries'>Related entries</a></li><li><a href='#references'>References</a></li></ul></div>
+<div class='maruku_toc'><ul><li><a href='#idea'>Idea</a></li><li><a href='#definition'>Definition</a></li><li><a href='#properties'>Properties</a></li><li><a href='#example'>Example</a></li><li><a href='#related_entries'>Related entries</a></li><li><a href='#references'>References</a></li></ul></div>
 <h2 id='idea'>Idea</h2>
 
 <p>An <strong>injective topos</strong> is a topos-theoretic generalization of the notion of an <a class='existingWikiWord' href='/nlab/show/injective+object'>injective object</a> familiar from algebra, or in other words, a topos with good extension properties along <a class='existingWikiWord' href='/nlab/show/subtopos'>subtopos inclusions</a>.</p>
 
 <h2 id='definition'>Definition</h2>
 
-<p>…</p>
+<div class='num_defn'>
+<h6 id='definition_2'>Definition</h6>
+
+<p>A <a class='existingWikiWord' href='/nlab/show/Grothendieck+topos'>Grothendieck topos</a> <math class='maruku-mathml' display='inline' id='mathml_a9f488fea782f9ada676d8fe3b1c24724ebc8615_2' xmlns='http://www.w3.org/1998/Math/MathML'><semantics><mrow><mi>ℰ</mi></mrow><annotation encoding='application/x-tex'>\mathcal{E}</annotation></semantics></math> is called <em>injective</em> (with respect to subtopos inclusions) in the <a class='existingWikiWord' href='/nlab/show/2-category'>2-category</a> of Grothendieck toposes <math class='maruku-mathml' display='inline' id='mathml_a9f488fea782f9ada676d8fe3b1c24724ebc8615_3' xmlns='http://www.w3.org/1998/Math/MathML'><semantics><mrow><mi>GrTop</mi></mrow><annotation encoding='application/x-tex'>GrTop</annotation></semantics></math> if for every inclusion <math class='maruku-mathml' display='inline' id='mathml_a9f488fea782f9ada676d8fe3b1c24724ebc8615_4' xmlns='http://www.w3.org/1998/Math/MathML'><semantics><mrow><mi>i</mi><mo>:</mo><mi>ℱ</mi><mo>↪</mo><mi>𝒢</mi></mrow><annotation encoding='application/x-tex'>i:\mathcal{F}\hookrightarrow\mathcal{G}</annotation></semantics></math> and 1-cell <math class='maruku-mathml' display='inline' id='mathml_a9f488fea782f9ada676d8fe3b1c24724ebc8615_5' xmlns='http://www.w3.org/1998/Math/MathML'><semantics><mrow><mi>f</mi><mo>:</mo><mi>ℱ</mi><mo>→</mo><mi>ℰ</mi></mrow><annotation encoding='application/x-tex'>f:\mathcal{F}\to\mathcal{E}</annotation></semantics></math> there exists a 1-cell <math class='maruku-mathml' display='inline' id='mathml_a9f488fea782f9ada676d8fe3b1c24724ebc8615_6' xmlns='http://www.w3.org/1998/Math/MathML'><semantics><mrow><mi>g</mi><mo>:</mo><mi>ℰ</mi><mo>→</mo><mi>𝒢</mi></mrow><annotation encoding='application/x-tex'>g:\mathcal{E}\to\mathcal{G}</annotation></semantics></math> and a 2-isomorphism <math class='maruku-mathml' display='inline' id='mathml_a9f488fea782f9ada676d8fe3b1c24724ebc8615_7' xmlns='http://www.w3.org/1998/Math/MathML'><semantics><mrow><mi>g</mi><mo>∘</mo><mi>i</mi><mo>≅</mo><mi>f</mi></mrow><annotation encoding='application/x-tex'>g\circ i\cong f</annotation></semantics></math> .</p>
+</div>
 
 <h2 id='properties'>Properties</h2>
+
+<p>…</p>
+
+<h2 id='example'>Example</h2>
 
 <p>…</p>
 
@@ -1026,14 +1034,14 @@ margin-left: 0em;
 </div>
 
 <div class="revisedby">
-  Revised on March 15, 2018 08:05:29 
+  Revised on March 15, 2018 10:51:22 
   by <a class="existingWikiWord" href="/nlab/show/Thomas+Holder">Thomas Holder</a>
-  (82.113.121.123)
+  (89.204.130.218)
 </div>
 
 <div class="navigation navfoot">
 
-  <a href="/nlab/edit/injective+topos" accesskey="E" class="navlink" id="edit" rel="nofollow">Edit</a> | <a href="/nlab/revision/injective+topos/4" accesskey="B" class="navlink" id="to_previous_revision" rel="nofollow">Back in time</a> <span class='revisions'>(4 revisions)</span> | <a href="/nlab/show/diff/injective+topos" accesskey="C" class="navlink" id="see_changes" rel="nofollow">See changes</a> | <a href="/nlab/history/injective+topos" accesskey="S" class="navlink" id="history" rel="nofollow">History</a>
+  <a href="/nlab/edit/injective+topos" accesskey="E" class="navlink" id="edit" rel="nofollow">Edit</a> | <a href="/nlab/revision/injective+topos/6" accesskey="B" class="navlink" id="to_previous_revision" rel="nofollow">Back in time</a> <span class='revisions'>(6 revisions)</span> | <a href="/nlab/show/diff/injective+topos" accesskey="C" class="navlink" id="see_changes" rel="nofollow">See changes</a> | <a href="/nlab/history/injective+topos" accesskey="S" class="navlink" id="history" rel="nofollow">History</a>
   
   <span class="views">
     | Views: 
