--- a/pages/15361.html
+++ b/pages/15361.html
@@ -675,7 +675,7 @@ margin-left: 0em;
 
 <ul>
 <li>
-<p><a class='existingWikiWord' href='/nlab/show/finite+quantum+mechanics+in+terms+of+dagger-compact+categories'>in terms of †-compact categories</a></p>
+<p><a class='existingWikiWord' href='/nlab/show/finite+quantum+mechanics+in+terms+of+dagger-compact+categories'>in terms of ∞-compact categories</a></p>
 </li>
 
 <li>
@@ -1376,7 +1376,7 @@ margin-left: 0em;
 
 <p>talk at <a href='http://physics.princeton.edu/strings2014/'>Strings 2014</a></p>
 
-<p>(<a href='http://physics.princeton.edu/strings2014/slides/Moore.pdf'>talk slides</a>, <a href='http://www.physics.rutgers.edu/~gmoore/PhysicalMathematicsAndFuture.pdf'>companion text pdf</a>)</p>
+<p>(<a href='http://physics.princeton.edu/strings2014/slides/Moore.pdf'>talk slides</a>, <a href='http://www.physics.rutgers.edu/~gmoore/PhysicalMathematicsAndFuture.pdf'>companion text pdf</a>, <a class='existingWikiWord' href='/nlab/files/MooreVisionTalk2014.pdf' title='pdf'>pdf</a>)</p>
 </li>
 </ul>
 
@@ -1389,11 +1389,11 @@ margin-left: 0em;
 </ul>
 <hr/>
 <blockquote>
-<p id='WeStillHaveNo'> We still have no fundamental formulation of “<a class='existingWikiWord' href='/nlab/show/M-theory'>M-theory</a>” - the hypothetical theory of which <a class='existingWikiWord' href='/nlab/show/11-dimensional+supergravity'>11-dimensional supergravity</a> and the five <a class='existingWikiWord' href='/nlab/show/string+theory'>string theories</a> are all special limiting cases. Work on formulating the fundamental principles underlying M-theory has noticeably waned. <math class='maruku-mathml' display='inline' id='mathml_586448c93a98d0313e252733493b8fee3fa4f343_1' xmlns='http://www.w3.org/1998/Math/MathML'><semantics><mrow><mo stretchy='false'>[</mo><mo>.</mo><mo>.</mo><mo>.</mo><mo stretchy='false'>]</mo></mrow><annotation encoding='application/x-tex'>[...]</annotation></semantics></math>. If history is a good guide, then we should expect that anything as profound and far-reaching as a fully satisfactory formulation of M-theory is surely going to lead to new and novel mathematics. Regrettably, it is a problem the community seems to have put aside - temporarily. But, ultimately, Physical Mathematics must return to this grand issue.</p>
+<p id='WeStillHaveNo'> We still have no fundamental formulation of “<a class='existingWikiWord' href='/nlab/show/M-theory'>M-theory</a>” - the hypothetical theory of which <a class='existingWikiWord' href='/nlab/show/11-dimensional+supergravity'>11-dimensional supergravity</a> and the five <a class='existingWikiWord' href='/nlab/show/string+theory'>string theories</a> are all special limiting cases. Work on formulating the fundamental principles underlying M-theory has noticeably waned. <math class='maruku-mathml' display='inline' id='mathml_57101f0c038d484570fe2952104eb416fb6b8158_1' xmlns='http://www.w3.org/1998/Math/MathML'><semantics><mrow><mo stretchy='false'>[</mo><mo>.</mo><mo>.</mo><mo>.</mo><mo stretchy='false'>]</mo></mrow><annotation encoding='application/x-tex'>[...]</annotation></semantics></math>. If history is a good guide, then we should expect that anything as profound and far-reaching as a fully satisfactory formulation of M-theory is surely going to lead to new and novel mathematics. Regrettably, it is a problem the community seems to have put aside - temporarily. But, ultimately, Physical Mathematics must return to this grand issue.</p>
 
 <p>(<a href='#Moore14'>Moore 14, section 12, p. 43-44</a>)</p>
 
-<p>Perhaps we need to understand the nature of time itself better. <math class='maruku-mathml' display='inline' id='mathml_586448c93a98d0313e252733493b8fee3fa4f343_2' xmlns='http://www.w3.org/1998/Math/MathML'><semantics><mrow><mo stretchy='false'>[</mo><mo>.</mo><mo>.</mo><mo>.</mo><mo stretchy='false'>]</mo></mrow><annotation encoding='application/x-tex'>[...]</annotation></semantics></math> One natural way to approach that question would be to understand in what sense time itself is an emergent concept, and one natural way to make sense of such a notion is to understand how pseudo-Riemannian geometry can emerge from more fundamental and abstract notions such as categories of branes.</p>
+<p>Perhaps we need to understand the nature of time itself better. <math class='maruku-mathml' display='inline' id='mathml_57101f0c038d484570fe2952104eb416fb6b8158_2' xmlns='http://www.w3.org/1998/Math/MathML'><semantics><mrow><mo stretchy='false'>[</mo><mo>.</mo><mo>.</mo><mo>.</mo><mo stretchy='false'>]</mo></mrow><annotation encoding='application/x-tex'>[...]</annotation></semantics></math> One natural way to approach that question would be to understand in what sense time itself is an emergent concept, and one natural way to make sense of such a notion is to understand how pseudo-Riemannian geometry can emerge from more fundamental and abstract notions such as categories of branes.</p>
 
 <p>(<a href='#Moore14'>Moore 14, section 9</a>)</p>
 </blockquote>
@@ -1402,14 +1402,14 @@ margin-left: 0em;
 </div>
 
 <div class="revisedby">
-  Revised on July  7, 2017 05:48:02 
+  Revised on March 16, 2018 10:59:05 
   by <a class="existingWikiWord" href="/nlab/show/Urs+Schreiber">Urs Schreiber</a>
-  (94.220.72.229)
+  (91.230.41.202)
 </div>
 
 <div class="navigation navfoot">
 
-  <a href="/nlab/edit/Physical+Mathematics+and+the+Future" accesskey="E" class="navlink" id="edit" rel="nofollow">Edit</a> | <a href="/nlab/revision/Physical+Mathematics+and+the+Future/3" accesskey="B" class="navlink" id="to_previous_revision" rel="nofollow">Back in time</a> <span class='revisions'>(3 revisions)</span> | <a href="/nlab/show/diff/Physical+Mathematics+and+the+Future" accesskey="C" class="navlink" id="see_changes" rel="nofollow">See changes</a> | <a href="/nlab/history/Physical+Mathematics+and+the+Future" accesskey="S" class="navlink" id="history" rel="nofollow">History</a>
+  <a href="/nlab/edit/Physical+Mathematics+and+the+Future" accesskey="E" class="navlink" id="edit" rel="nofollow">Edit</a> | <a href="/nlab/revision/Physical+Mathematics+and+the+Future/4" accesskey="B" class="navlink" id="to_previous_revision" rel="nofollow">Back in time</a> <span class='revisions'>(4 revisions)</span> | <a href="/nlab/show/diff/Physical+Mathematics+and+the+Future" accesskey="C" class="navlink" id="see_changes" rel="nofollow">See changes</a> | <a href="/nlab/history/Physical+Mathematics+and+the+Future" accesskey="S" class="navlink" id="history" rel="nofollow">History</a>
   
   <span class="views">
     | Views: 
