--- a/pages/15519.html
+++ b/pages/15519.html
@@ -257,8 +257,8 @@ margin-left: 0em;
     //--><!]]>
   </script>
 
-  	<link href="https://ncatlab.org/nlab/atom_with_headlines" rel="alternate" title="Atom with headlines" type="application/atom+xml" />
-  	<link href="https://ncatlab.org/nlab/atom_with_content" rel="alternate" title="Atom with full content" type="application/atom+xml" />
+  	<link href="http://nlab-local/nlab/atom_with_headlines" rel="alternate" title="Atom with headlines" type="application/atom+xml" />
+  	<link href="http://nlab-local/nlab/atom_with_content" rel="alternate" title="Atom with full content" type="application/atom+xml" />
   <script type="text/javascript">
   document.observe("dom:loaded", function() {
     generateThmNumbers();
@@ -640,7 +640,7 @@ margin-left: 0em;
 </p>
 </div></div>
 
-<h4 id='topos_theory_2'><math class='maruku-mathml' display='inline' id='mathml_a9f488fea782f9ada676d8fe3b1c24724ebc8615_1' xmlns='http://www.w3.org/1998/Math/MathML'><semantics><mrow><mo stretchy='false'>(</mo><mn>∞</mn><mo>,</mo><mn>1</mn><mo stretchy='false'>)</mo></mrow><annotation encoding='application/x-tex'>(\infty,1)</annotation></semantics></math>-Topos Theory</h4>
+<h4 id='topos_theory_2'><math class='maruku-mathml' display='inline' id='mathml_6b2f7026efd7d69c587b6808373e481617c59c78_1' xmlns='http://www.w3.org/1998/Math/MathML'><semantics><mrow><mo stretchy='false'>(</mo><mn>∞</mn><mo>,</mo><mn>1</mn><mo stretchy='false'>)</mo></mrow><annotation encoding='application/x-tex'>(\infty,1)</annotation></semantics></math>-Topos Theory</h4>
 
 <div class='hide'>
 <p><strong><a class='existingWikiWord' href='/nlab/show/%28infinity%2C1%29-topos+theory'>(∞,1)-topos theory</a></strong></p>
@@ -985,7 +985,7 @@ margin-left: 0em;
 <div class='num_defn'>
 <h6 id='definition_2'>Definition</h6>
 
-<p>A <a class='existingWikiWord' href='/nlab/show/Grothendieck+topos'>Grothendieck topos</a> <math class='maruku-mathml' display='inline' id='mathml_a9f488fea782f9ada676d8fe3b1c24724ebc8615_2' xmlns='http://www.w3.org/1998/Math/MathML'><semantics><mrow><mi>ℰ</mi></mrow><annotation encoding='application/x-tex'>\mathcal{E}</annotation></semantics></math> is called <em>injective</em> (with respect to subtopos inclusions) in the <a class='existingWikiWord' href='/nlab/show/2-category'>2-category</a> of Grothendieck toposes <math class='maruku-mathml' display='inline' id='mathml_a9f488fea782f9ada676d8fe3b1c24724ebc8615_3' xmlns='http://www.w3.org/1998/Math/MathML'><semantics><mrow><mi>GrTop</mi></mrow><annotation encoding='application/x-tex'>GrTop</annotation></semantics></math> if for every inclusion <math class='maruku-mathml' display='inline' id='mathml_a9f488fea782f9ada676d8fe3b1c24724ebc8615_4' xmlns='http://www.w3.org/1998/Math/MathML'><semantics><mrow><mi>i</mi><mo>:</mo><mi>ℱ</mi><mo>↪</mo><mi>𝒢</mi></mrow><annotation encoding='application/x-tex'>i:\mathcal{F}\hookrightarrow\mathcal{G}</annotation></semantics></math> and 1-cell <math class='maruku-mathml' display='inline' id='mathml_a9f488fea782f9ada676d8fe3b1c24724ebc8615_5' xmlns='http://www.w3.org/1998/Math/MathML'><semantics><mrow><mi>f</mi><mo>:</mo><mi>ℱ</mi><mo>→</mo><mi>ℰ</mi></mrow><annotation encoding='application/x-tex'>f:\mathcal{F}\to\mathcal{E}</annotation></semantics></math> there exists a 1-cell <math class='maruku-mathml' display='inline' id='mathml_a9f488fea782f9ada676d8fe3b1c24724ebc8615_6' xmlns='http://www.w3.org/1998/Math/MathML'><semantics><mrow><mi>g</mi><mo>:</mo><mi>ℰ</mi><mo>→</mo><mi>𝒢</mi></mrow><annotation encoding='application/x-tex'>g:\mathcal{E}\to\mathcal{G}</annotation></semantics></math> and a 2-isomorphism <math class='maruku-mathml' display='inline' id='mathml_a9f488fea782f9ada676d8fe3b1c24724ebc8615_7' xmlns='http://www.w3.org/1998/Math/MathML'><semantics><mrow><mi>g</mi><mo>∘</mo><mi>i</mi><mo>≅</mo><mi>f</mi></mrow><annotation encoding='application/x-tex'>g\circ i\cong f</annotation></semantics></math> .</p>
+<p>A <a class='existingWikiWord' href='/nlab/show/Grothendieck+topos'>Grothendieck topos</a> <math class='maruku-mathml' display='inline' id='mathml_6b2f7026efd7d69c587b6808373e481617c59c78_2' xmlns='http://www.w3.org/1998/Math/MathML'><semantics><mrow><mi>ℰ</mi></mrow><annotation encoding='application/x-tex'>\mathcal{E}</annotation></semantics></math> is called <em>injective</em> (with respect to subtopos inclusions) in the <a class='existingWikiWord' href='/nlab/show/2-category'>2-category</a> of Grothendieck toposes <math class='maruku-mathml' display='inline' id='mathml_6b2f7026efd7d69c587b6808373e481617c59c78_3' xmlns='http://www.w3.org/1998/Math/MathML'><semantics><mrow><mi>GrTop</mi></mrow><annotation encoding='application/x-tex'>GrTop</annotation></semantics></math> if for every inclusion <math class='maruku-mathml' display='inline' id='mathml_6b2f7026efd7d69c587b6808373e481617c59c78_4' xmlns='http://www.w3.org/1998/Math/MathML'><semantics><mrow><mi>i</mi><mo>:</mo><mi>ℱ</mi><mo>↪</mo><mi>𝒢</mi></mrow><annotation encoding='application/x-tex'>i:\mathcal{F}\hookrightarrow\mathcal{G}</annotation></semantics></math> and 1-cell <math class='maruku-mathml' display='inline' id='mathml_6b2f7026efd7d69c587b6808373e481617c59c78_5' xmlns='http://www.w3.org/1998/Math/MathML'><semantics><mrow><mi>f</mi><mo>:</mo><mi>ℱ</mi><mo>→</mo><mi>ℰ</mi></mrow><annotation encoding='application/x-tex'>f:\mathcal{F}\to\mathcal{E}</annotation></semantics></math> there exists a 1-cell <math class='maruku-mathml' display='inline' id='mathml_6b2f7026efd7d69c587b6808373e481617c59c78_6' xmlns='http://www.w3.org/1998/Math/MathML'><semantics><mrow><mi>g</mi><mo>:</mo><mi>ℰ</mi><mo>→</mo><mi>𝒢</mi></mrow><annotation encoding='application/x-tex'>g:\mathcal{E}\to\mathcal{G}</annotation></semantics></math> and a 2-isomorphism <math class='maruku-mathml' display='inline' id='mathml_6b2f7026efd7d69c587b6808373e481617c59c78_7' xmlns='http://www.w3.org/1998/Math/MathML'><semantics><mrow><mi>g</mi><mo>∘</mo><mi>i</mi><mo>≅</mo><mi>f</mi></mrow><annotation encoding='application/x-tex'>g\circ i\cong f</annotation></semantics></math> .</p>
 </div>
 
 <h2 id='properties'>Properties</h2>
@@ -994,7 +994,9 @@ margin-left: 0em;
 
 <h2 id='example'>Example</h2>
 
-<p>…</p>
+<ul>
+<li><math class='maruku-mathml' display='inline' id='mathml_6b2f7026efd7d69c587b6808373e481617c59c78_8' xmlns='http://www.w3.org/1998/Math/MathML'><semantics><mrow><mi>Set</mi></mrow><annotation encoding='application/x-tex'>Set</annotation></semantics></math> is the only injective <a class='existingWikiWord' href='/nlab/show/Boolean+topos'>Boolean topos</a> (cf <a href='#JT02'>Johnstone 2002</a>, p.740).</li>
+</ul>
 
 <h2 id='related_entries'>Related entries</h2>
 
@@ -1023,7 +1025,7 @@ margin-left: 0em;
 <p><a class='existingWikiWord' href='/nlab/show/Peter+Johnstone'>Peter Johnstone</a>, <em>Injective Toposes</em> , pp.284-297 in LNM <strong>871</strong> Springer Heidelberg 1981.</p>
 </li>
 
-<li>
+<li id='JT02'>
 <p><a class='existingWikiWord' href='/nlab/show/Peter+Johnstone'>Peter Johnstone</a>, <em>Sketches of an Elephant vol. 2</em> , Cambridge UP 2002. (section C4.3, pp.738-745)</p>
 </li>
 
@@ -1034,14 +1036,14 @@ margin-left: 0em;
 </div>
 
 <div class="revisedby">
-  Revised on March 15, 2018 10:51:22 
+  Revised on March 16, 2018 10:05:40 
   by <a class="existingWikiWord" href="/nlab/show/Thomas+Holder">Thomas Holder</a>
-  (89.204.130.218)
+  (82.113.121.14)
 </div>
 
 <div class="navigation navfoot">
 
-  <a href="/nlab/edit/injective+topos" accesskey="E" class="navlink" id="edit" rel="nofollow">Edit</a> | <a href="/nlab/revision/injective+topos/6" accesskey="B" class="navlink" id="to_previous_revision" rel="nofollow">Back in time</a> <span class='revisions'>(6 revisions)</span> | <a href="/nlab/show/diff/injective+topos" accesskey="C" class="navlink" id="see_changes" rel="nofollow">See changes</a> | <a href="/nlab/history/injective+topos" accesskey="S" class="navlink" id="history" rel="nofollow">History</a>
+  <a href="/nlab/edit/injective+topos" accesskey="E" class="navlink" id="edit" rel="nofollow">Edit</a> | <a href="/nlab/revision/injective+topos/7" accesskey="B" class="navlink" id="to_previous_revision" rel="nofollow">Back in time</a> <span class='revisions'>(7 revisions)</span> | <a href="/nlab/show/diff/injective+topos" accesskey="C" class="navlink" id="see_changes" rel="nofollow">See changes</a> | <a href="/nlab/history/injective+topos" accesskey="S" class="navlink" id="history" rel="nofollow">History</a>
   
   <span class="views">
     | Views: 
